--- a/source/manifest.json
+++ b/source/manifest.json
@@ -1,8 +1,8 @@
 {
 	"name": "Neko",
 	"short_name": "猫",
-	"version": "2.0.0",
-	"version_name": "DreamButt",
+	"version": "2.0.1",
+	"version_name": "DigitalMind",
 	"author": "LewdTechnologies",
 
 	"description": "Neko redesigns E621's interface.",
